[package]
name = "barbara"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for instantly surface matching MDN articles by keyword or partial phrase."


[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
flate2 = "1.1.1"
reqwest = "0.12.15"
select = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread"] }
webbrowser = "1.0.4"
xml = "0.8.20"
